[backport] Tests should use all heuristics and pass heap verification + Disable aggressive+verification test configs